formatting and stylizing of index

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
         <h1>Odin Recipes</h1> 
 
+        <div class="container">
         <a href="./recipes/lasagna.html">Lasagna</a>
         <a href="./recipes/mac_and_cheese.html">Mac and Cheese</a>
         <a href="./recipes/chicken_salad.html">Chicken Salad</a>
+        </div>
     </body>
 </html>
